Fixed sidebar box text align
Both justify-content and text-align is necessary for proper text alignment

--- a/src/css/components/sidebar/box.css
+++ b/src/css/components/sidebar/box.css
@@ -16,6 +16,8 @@
     background: var(--SidebarBox-heading-background);
     display: flex;
     gap: 5px;
+    justify-content: var(--SidebarBox-heading-text-align);
+    text-align: var(--SidebarBox-heading-text-align);
 }
 
 .SidebarBox-heading:hover {
